# ChangeLog for x11-misc/xdotool
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xdotool/ChangeLog,v 1.7 2010/01/14 07:30:32 joker Exp $

  14 Jan 2010; Christian Birchinger <joker@gentoo.org>
  xdotool-20091231.02.ebuild:
  Added RESTRICT=test and a reason for it.

*xdotool-20091231.02 (14 Jan 2010)

  14 Jan 2010; Christian Birchinger <joker@gentoo.org>
  +xdotool-20091231.02.ebuild, +files/xdotool-20091231.02_as-needed.patch,
  +files/xdotool-20091231.02_install-D.patch:
  Version bump and ebuild cleanups.

  30 Oct 2009; Markus Meier <maekke@gentoo.org> xdotool-20090609.ebuild:
  amd64/x86 stable, bug #289978

*xdotool-20090815 (21 Oct 2009)

  21 Oct 2009; Christian Birchinger <joker@gentoo.org>
  +xdotool-20090815.ebuild:
  Version bump.

  03 Aug 2009; Christian Birchinger <joker@gentoo.org>
  xdotool-20090609.ebuild:
  Change the linker argument order to LDFLAGS, objects, libraries.

  15 Jul 2009; Christian Birchinger <joker@gentoo.org>
  xdotool-20090609.ebuild:
  Various adjustments to the ebuild to deal with bug #274661. No revision bump
  because the installed working binaries stay the same

*xdotool-20090609 (15 Jun 2009)

  15 Jun 2009; Christian Birchinger <joker@gentoo.org>
  +xdotool-20090609.ebuild:
  Initial import. Thanks to Maryasin Semen <marsoft@ya.ru> and Urban
  <urban82@gmail.com>
