@@ -1,10 +1,12 @@
 AUX xdotool-20091231.02_as-needed.patch 484 RMD160 ae6687fca11f75bc0f90945ea204b7f38001ca0e SHA1 7380844702c0f2dd1bef313f07f55b59cd2fc457 SHA256 a515ac614a11227cb5d18d44248984d1a9e3a7406e03241ac5a3da7ef7a85c3e
 AUX xdotool-20091231.02_install-D.patch 971 RMD160 c7ff39104b1fc705b08d58cd9121409c5c1731c7 SHA1 3d3fef1f93d6771ed019facc89259047e2c317dd SHA256 409b06fea87c4760de66befaefa933b8957c6df5828972c044f4ee70992f3563
+DIST xdotool-1.20100318.2737.tar.gz 34473 RMD160 afd7ad77204cc4c0e8b0b87103782360a0c1ab27 SHA1 f31fdcf7365b62de94e38ef490da1b195ed4f08c SHA256 76a987f0ef6211f231a4606d6b23919055fef23bcd2c27cf9a87ca7da9937976
 DIST xdotool-20090609.tar.gz 19061 RMD160 89b6bacb179a4b59db20a4664f7853274de39b4e SHA1 5aa8c218e6de1cc14835cf0fce6da8f985d7c63e SHA256 6a3283178ab72c9eef9ed846627e1d39ff3a9a2a9a77de5400a8f640fa42fa04
 DIST xdotool-20090815.tar.gz 22479 RMD160 3d8c6e8a51e0666331055cf96450acde796939b4 SHA1 a980167f05b5d862d554e2a7f9444023049cd7d6 SHA256 2cccc9f4b106225ec47365f19300bd49e9151e8c37594d072ff8588a34c1e4c7
 DIST xdotool-20091231.02.tar.gz 24244 RMD160 27d64dd6d2eedb13d987656169bc0fcbcf9b62d5 SHA1 bcb858a70760518ea87b5fea6bd9970b7afe30dd SHA256 a52a874874a48d2b5c1db8bd0889769df5f0590fc00ddde17c2ce104e8a53430
+EBUILD xdotool-1.20100318.2737.ebuild 1222 RMD160 a1e22af559e9821f9421fe66fe955680c66bb13c SHA1 72e4b3d98228a270cb8761cdea47cd6617db974e SHA256 ea4b5a26b5475428d9cfddd1a105c43a7eb420ca35bae0685ab5d0f0516e9081
 EBUILD xdotool-20090609.ebuild 1122 RMD160 910b3b6f92ee96483e9c1e7bbeb5ff9e8d5b8b62 SHA1 3af63384dd00a8646275f456c9e59e1ac0d734f1 SHA256 50538746ca4fa5b882e2d1d8b152b9f9b8260b5a0e40d08105a1724ff606e5cb
 EBUILD xdotool-20090815.ebuild 1125 RMD160 e9f3e76a155eedb98081d8bf60a556fd5a7e9f3c SHA1 97861241ea64187fab657f615aa65157985bc57c SHA256 7fecbf4db61bd10e31bdf573e84c776f9debee9c85967ba7aacb74188ff33124
 EBUILD xdotool-20091231.02.ebuild 1369 RMD160 425beb6f28e0c1ae85cf49b7aba5a0eceff3c173 SHA1 ba4e2ca8150070fb34a59843ab20ec2e37683716 SHA256 c40a1dfcc975462aeb6f74d835478f0e89b36d9783d7b6e05a6b89327fe17a12
-MISC ChangeLog 1396 RMD160 cc0ee63329dbd38fcb84991f87c3ffb71939ca4b SHA1 22c69eaefe573f5e9cde11e714b30870d05928e2 SHA256 5e342ec3b8703e3c0b4d9077913db19e1025baf5a8e8a3fd93351761ceec98e0
+MISC ChangeLog 1720 RMD160 8f5fb8e1785e58820d2ba4a7d58f9b4fb25ac0e3 SHA1 a86d553761b1355ad5729613861e36974396e153 SHA256 e53d7c08f18fadaee9a66e68b49932752101a7f7ceb9ccd505fdb13e81a5548e
 MISC metadata.xml 481 RMD160 64e577586b777ec3cd0968be05354b2d6edf1790 SHA1 042b6b55dba90dff77d3fa9201d4d62abbb1e251 SHA256 5bfee97d019d9c664ec75a56401eb36710303bb81d82401b01e16a6c2997fbf4
