@@ -1,6 +1,14 @@
 # ChangeLog for x11-misc/xdotool
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xdotool/ChangeLog,v 1.7 2010/01/14 07:30:32 joker Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xdotool/ChangeLog,v 1.8 2010/04/08 15:31:05 joker Exp $
+
+*xdotool-1.20100318.2737 (08 Apr 2010)
+
+  08 Apr 2010; Christian Birchinger <joker@gentoo.org>
+  +xdotool-1.20100318.2737.ebuild:
+  Version bump. Droped 2 patches that now seem unneeded, because the install
+  target creates the needed directories now and the linker target got the
+  LIBS moved at the end of the arguments.
 
   14 Jan 2010; Christian Birchinger <joker@gentoo.org>
   xdotool-20091231.02.ebuild:
